[gd_scene load_steps=3 format=3 uid="uid://cfui0qd8qiwxj"]

[ext_resource type="PackedScene" uid="uid://dofxa8sxjy7aw" path="res://UI/PopUp.tscn" id="1_10ker"]
[ext_resource type="Script" path="res://Prototype/test_popup.gd" id="1_y0pmx"]

[node name="TestPopup" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_y0pmx")

[node name="PopUp" parent="." instance=ExtResource("1_10ker")]
layout_mode = 0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 509.0
offset_right = 220.0
offset_bottom = 540.0
text = "Show Small Tile"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 243.0
offset_top = 509.0
offset_right = 374.0
offset_bottom = 540.0
text = "Show Entity Tile"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
